--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -1,6 +1,6 @@
 <%- include("../includes/head" , {pageTitle: "Sign-up"})%>
-<link rel="stylesheet" href="/public/styles/form.css">
-<link rel="stylesheet" href="/public/styles/auth.css">
+<link rel="stylesheet" href="/styles/auth.css">
+<link rel="stylesheet" href="/styles/form.css">
 </head>
 <body>
 <%- include("../includes/header") %>
@@ -8,7 +8,7 @@
 <main>
     <h1>Create New Account</h1>
    
-    <form action="" method="">
+    <form action="/signup" method="POST">
 
     <p>
         <label for="email">E-Mail</label>
