Sign-up functionality complete

--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -17,8 +17,9 @@
 
     <p>
         <label for="confirm-email">Confirm E-Mail</label>
-        <input type="email" id="confirm-email" name="confirm-email" required>
+        <input type="confirm-email" id="confirm-email" name="confirm-email" required>
     </p>
+
 
     <p>
         <label for="password">Password</label>
