included package.json

--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -1,9 +1,9 @@
-<%- include("../includes/head" , {pageTitle: "Sign-up"})%>
+<%- include("../../base/includes/head" , {pageTitle: "Login"})%>
 <link rel="stylesheet" href="/styles/auth.css">
 <link rel="stylesheet" href="/styles/form.css">
 </head>
 <body>
-<%- include("../includes/header") %>
+<%- include("../../base/includes/header") %>
 
 <main>
     <h1>Log-in your account</h1>
@@ -36,4 +36,4 @@
 </main>
     
 
-  <%- include("../includes/footer")%>    
+  <%- include("../../base/includes/footer")%>    
