--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -1,9 +1,9 @@
-<%- include("../includes/head" , {pageTitle: "Sign-up"})%>
+<%- include("../../includes/head" , {pageTitle: "Sign-up"})%>
 <link rel="stylesheet" href="/styles/auth.css">
 <link rel="stylesheet" href="/styles/form.css">
 </head>
 <body>
-<%- include("../includes/header") %>
+<%- include("../../base/includes/header") %>
 
 <main>
     <h1> Create New Account</h1>
@@ -61,4 +61,4 @@
 </main>
     
 
-  <%- include("../includes/footer")%>    
+  <%- include("../../base/includes/footer")%>    
