--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -1,39 +1,23 @@
-<%- include("../../base/includes/head" , {pageTitle: "Login"})%>
-<link rel="stylesheet" href="/styles/auth.css">
-<link rel="stylesheet" href="/styles/form.css">
+<%- include('../../base/includes/head', { pageTitle: 'Login' }) %>
+  <link rel="stylesheet" href="/styles/form.css">
+  <link rel="stylesheet" href="/styles/auth.css">
 </head>
 <body>
-<%- include("../../base/includes/header") %>
-
-<main>
-    <h1>Log-in your account</h1>
-   
+  <%- include('../../base/includes/header') %>
+  <main>
+    <h1>Login</h1>
     <form action="/login" method="POST">
-
-        <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
-
-    <p>
+      <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
+      <p>
         <label for="email">E-Mail</label>
         <input type="email" id="email" name="email" required>
-    </p>
-
-    <p>
+      </p>
+      <p>
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" minLength="6" required>
-    </p>
-
-     <button class="btn">Login</button>
-    <p id="switch-form">
-        <a href="/signup">Create a new account instead</a>
-    </p>
-
- </form>
-
-    
-
-
-    
-</main>
-    
-
-  <%- include("../../base/includes/footer")%>    
+        <input type="password" id="password" name="password" minlength="6" required>
+      </p>
+      <button class="btn">Login</button>
+      <p id="switch-form"><a href="/signup">Create a new user</a></p>
+    </form>
+  </main>
+<%- include('../../base/includes/footer') %>  
