--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -1,64 +1,50 @@
-<%- include("../../includes/head" , {pageTitle: "Sign-up"})%>
-<link rel="stylesheet" href="/styles/auth.css">
-<link rel="stylesheet" href="/styles/form.css">
+<%- include('../../base/includes/head', { pageTitle: 'Signup' }) %>
+  <link rel="stylesheet" href="/styles/form.css">
+  <link rel="stylesheet" href="/styles/auth.css">
 </head>
 <body>
-<%- include("../../base/includes/header") %>
-
-<main>
-    <h1> Create New Account</h1>
-   
+  <%- include('../../base/includes/header') %>
+  <main>
+    <h1>Create New Account</h1>
     <form action="/signup" method="POST">
-
-        <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
-
-    <p>
+      <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
+      <p>
         <label for="email">E-Mail</label>
         <input type="email" id="email" name="email" required>
-    </p>
-
-    <p>
-        <label for="confirm-email">Confirm E-Mail</label>
-        <input type="confirm-email" id="confirm-email" name="confirm-email" required>
-    </p>
-
-
-    <p>
+      </p>
+      <p>
+        <label for="confirm-email">Confirm Email</label>
+        <input type="email" id="confirm-email" name="confirm-email" required>
+      </p>
+      <p>
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" minLength="6" required>
-    </p>
-
-    <hr>
-
-    <p>
+        <input type="password" id="password" name="password" minlength="6" required>
+      </p>
+      <hr>
+      <p>
         <label for="fullname">Full Name</label>
         <input type="text" id="fullname" name="fullname" required>
-    </p>
-
-
-    <p>
-        <label for="street">Street Address</label>
+      </p>
+      <p>
+        <label for="street">Street</label>
         <input type="text" id="street" name="street" required>
-    </p>
-
-    <p>
+      </p>
+      <p>
         <label for="postal">Postal Code</label>
-        <input type="text" id="postal" name="postal" minLength="6" maxLength="6" required>
-    </p>
-
-
-    <p>
+        <input 
+          type="text" 
+          id="postal" 
+          name="postal" 
+          minlength="5" 
+          maxlength="5" 
+          required>
+      </p>
+      <p>
         <label for="city">City</label>
         <input type="text" id="city" name="city" required>
-    </p>
-
-    <button class="btn">Create Account</button>
-    <p id="switch-form">
-        <a href="/login">Login Instead</a>
-    </p>
-
- </form>
-</main>
-    
-
-  <%- include("../../base/includes/footer")%>    
+      </p>
+      <button class="btn">Create Account</button>
+      <p id="switch-form"><a href="/login">Login instead</a></p>
+    </form>
+  </main>
+<%- include('../../base/includes/footer') %>
