--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -7,18 +7,19 @@
   <main>
     <h1>Product Administration</h1>
     <section>
-
-      <h2>Product Management</h2>
+      <h2>Manage Products</h2>
       <p>
         <a href="/admin/products/new" class="btn">Add Product</a>
       </p>
-
     </section>
-
-
     <section>
-      <p>A List of products...</p>
+      <ul id="products-grid">
+        <% for (const product of products) { %>
+          <li>
+            <%- include('includes/product-item', { product: product }) %>
+          </li>
+        <% } %>
+      </ul>
     </section>
-
   </main>
 <%- include('../../base/includes/footer') %>
