added product styling css rules

--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -1,6 +1,7 @@
 <%- include('../../base/includes/head', { pageTitle: 'Product' }) %>
   <link rel="stylesheet" href="/styles/form.css">
   <link rel="stylesheet" href="/styles/auth.css">
+  <link rel="stylesheet" href="/styles/products.css">
 </head>
 <body>
   <%- include('../../base/includes/header') %>
