--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -2,6 +2,7 @@
   <link rel="stylesheet" href="/styles/form.css">
   <link rel="stylesheet" href="/styles/auth.css">
   <link rel="stylesheet" href="/styles/products.css">
+  <script src="/scripts/product-management.js" defer></script>
 </head>
 <body>
   <%- include('../../base/includes/header') %>
