--- a/views/customer/products/all-products.ejs
+++ b/views/customer/products/all-products.ejs
@@ -1,12 +1,31 @@
 <%- include('../../base/includes/head', { pageTitle: 'Signup' }) %>
   <link rel="stylesheet" href="/styles/form.css">
   <link rel="stylesheet" href="/styles/auth.css">
+  <link rel="stylesheet" href="/styles/products.css">
 </head>
 <body>
   <%- include('../../base/includes/header') %>
   <main>
     <h1>All products</h1>
-    <p>A List of products...</p>
+    <ul id="products-grid">
+    
+    <% for(product of products) { %>
+
+      <article class="product-item">
+        <img src="<%= product.imageUrl %>" alt="<%= product.title %>" />
+        <div class="product-item-content">
+          <h2><%= product.title %></h2>
+          <div class="product-item-actions">
+            <a class="btn btn-alt" href="/products/<%= product.id %>">View Details</a>
+            <!-- <button class="btn btn-alt" data-productid="<%= product.id %>" data-csrf="<%= locals.csrfToken %>">Delete</button> -->
+          </div>
+        </div>
+      </article>
+
+    </ul>
+
+
+      <% } %>
 
   </main>
 <%- include('../../base/includes/footer') %>
