--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -60,17 +60,22 @@ a {
 }
 
 .alert {
-
-    border-radius: var(--border-radius-small);
-    background-color: var(--color-error-100);
-    color: var(--color-error-500);
-    padding: var(--space-4);
-
+  border-radius: var(--border-radius-small);
+  background-color: var(--color-error-100);
+  color: var(--color-error-500);
+  padding: var(--space-4);
 }
 
-
 .alert h2 {
-    font-size: 1rem;
-    margin: var(--space-2);
-    text-transform: uppercase;
+  font-size: 1rem;
+  margin: var(--space-2);
+  text-transform: uppercase;
+}
+
+.badge {
+  margin-left: var(--space-2);
+  padding: 0.15rem var(--space-4);
+  border-radius: 10rem;
+  background-color: var(--color-primary-500);
+  color: var(--color-primary-500-contrast);
 }
