cart updation via AJAX

--- a/views/base/includes/nav-items.ejs
+++ b/views/base/includes/nav-items.ejs
@@ -2,7 +2,7 @@
 
     <% if(!locals.isAdmin) {%>
     <li> <a href="/">Shop</a></li>
-    <li><a href="/cart">Cart <span class="badge"><%= locals.cart.totalQuantity %></span></a></li>
+    <li><a href="/cart">Cart <span class="badge" id="cart-badge"><%= locals.cart.totalQuantity %></span></a></li>
 
     <% } %>
 
