--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -1,11 +1,9 @@
-<%- include('../../base/includes/head', { pageTitle: 'Product' }) %>
-  <link rel="stylesheet" href="/styles/form.css">
-  <link rel="stylesheet" href="/styles/auth.css">
-  <link rel="stylesheet" href="/styles/products.css">
-  <script src="/scripts/product-management.js" defer></script>
+<%- include('../../shared/includes/head', { pageTitle: 'All Products' }) %>
+<link rel="stylesheet" href="/styles/products.css">
+<script src="/scripts/product-management.js" defer></script>
 </head>
 <body>
-  <%- include('../../base/includes/header') %>
+  <%- include('../../shared/includes/header') %>
   <main>
     <h1>Product Administration</h1>
     <section>
@@ -18,10 +16,10 @@
       <ul id="products-grid">
         <% for (const product of products) { %>
           <li>
-            <%- include('includes/product-item', { product: product }) %>
+            <%- include('../../shared/includes/product-item', { product: product }) %>
           </li>
         <% } %>
       </ul>
     </section>
   </main>
-<%- include('../../base/includes/footer') %>
+<%- include('../../shared/includes/footer') %>
