--- a/views/admin/products/includes/product-form.ejs
+++ b/views/admin/products/includes/product-form.ejs
@@ -1,63 +1,36 @@
-<form
-  action="<%= submitPath %>?_csrf=<%= locals.csrfToken %>"
-  method="POST"
-  enctype="multipart/form-data"
->
+<form action="<%= submitPath %>?_csrf=<%= locals.csrfToken %>" method="POST" enctype="multipart/form-data">
   <p>
     <label for="title">Title</label>
-    <input
-      type="text"
-      id="title"
-      name="title"
-      value="<%= product.title %>"
-      required
-    />
+    <input type="text" id="title" name="title" value="<%= product.title %>" required>
   </p>
-  <p>
-    <label for="image">Image</label>
-    <input
-      type="file"
-      id="image"
-      name="image"
-      accept="image/png,image/jpg"
-      value="<%= product.image %>"
-    />
-  </p>
+
+  <div id="image-upload-control">
+    <p>
+      <label for="image">Image</label>
+      <input type="file" id="image" name="image" accept="image/png,image/jpg" <% if (imageRequired) { %>required<% } %>>
+    </p>
+
+    <img src="" alt="Selected image.">
+  </div>
+  
 
   <p>
     <label for="summary">Summary</label>
-    <input
-      type="text"
-      id="summary"
-      name="summary"
-      value="<%= product.summary %>"
-      required
-      maxlength="250"
-    />
+    <input type="text" id="summary" name="summary" value="<%= product.summary %>" required maxlength="250">
   </p>
 
   <p>
     <label for="price">Price</label>
-    <input
-      type="number"
-      id="price"
-      name="price"
-      required
-      min="0.01"
-      step="0.01"
-      value="<%= product.price %>"
-    />
+    <input type="number" id="price" name="price" value="<%= product.price %>" min="0.01" step="0.01" required>
   </p>
 
   <p>
     <label for="description">Description</label>
-    <textarea name="description" id="description" rows="10" required>
-<%= product.description %></textarea
-    >
+    <textarea id="description" name="description" rows="7" required><%= product.description %></textarea>
   </p>
 
   <p>
-    <button type="reset" class="btn-alt">Reset</button>
-    <button type="submit" class="btn">Update</button>
+    <button type="reset" class="btn btn-alt">Reset</button>
+    <button class="btn">Save</button>
   </p>
 </form>
