--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -1,11 +1,9 @@
-<%- include('../../base/includes/head', { pageTitle: 'Your Cart' }) %>
-<link rel="stylesheet" href="/styles/form.css">
-<link rel="stylesheet" href="/styles/auth.css">
+<%- include('../../shared/includes/head', { pageTitle: 'Your Cart' }) %>
 <link rel="stylesheet" href="/styles/cart.css">
 <script src="/scripts/cart-item-management.js" defer></script>
 </head>
 <body>
-  <%- include('../../base/includes/header') %>
+  <%- include('../../shared/includes/header') %>
   <main>
     <h1>Your Cart</h1>
     <ul id="cart-items">
@@ -16,9 +14,16 @@
       <% } %>
     </ul>
     <div id="cart-total">
-      <p>Total: $<%= locals.cart.totalPrice.toFixed(2) %></p>
+      <p>Total: $<span id="cart-total-price"><%= locals.cart.totalPrice.toFixed(2) %></span></p>
 
-      <button class="btn">Buy Products</button>
+      <% if (locals.isAuth) { %>
+        <form action="/orders" method="POST">
+          <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
+          <button class="btn">Buy Products</button>
+        </form>
+      <% } else { %>
+        <p id="cart-total-fallback">Log in to proceed and purchase the items.</p>
+      <% } %>
     </div>
   </main>
-<%- include('../../base/includes/footer') %>
+<%- include('../../shared/includes/footer') %>
